Create layout using Grid, upload icons

--- a/index.html
+++ b/index.html
@@ -6,8 +6,133 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emma's Admin Dashboard</title>
     <link rel="stylesheet" href="dashboard_style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 <body>
-    
+    <div class="sidebar">
+        <div class="sidebar-heading">Dashboard</div>
+        <div class="menu1">
+            <!-- <img src="img/home.png" class="sidebar">
+            <img src="img/profile.png" class="sidebar">
+            <img src="img/messages.png" class="sidebar">
+            <img src="img/history.png" class="sidebar">
+            <img src="img/tasks.png" class="sidebar">
+            <img src="img/communities.png" class="sidebar"> -->
+            <div>Home</div>
+            <div>Profile</div>
+            <div>Messages</div>
+            <div>History</div>
+            <div>Tasks</div>
+            <div>Communities</div>
+        </div>
+        <div class="menu2">
+            <div>Settings</div>
+            <div>Support</div>
+            <div>Privacy</div>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="header">
+            <div class="navigation">
+                <div class="search">
+                    <div>searchicon</div>
+                    <div>searchbaaaaaaaaaaaaaar</div>
+                </div>
+                <div class="profile">
+                    <div id="notification">notif</div>
+                    <div id="small-avatar">avatar</div>
+                    <div id="username">username</div>
+                </div>
+            </div>
+            <div class="controls">
+                <div class="greeting">
+                    <div>avatar</div>
+                    <div>greeting</div>
+                </div>
+                <div class="buttons">
+                    <div>New</div>
+                    <div>Upload</div>
+                    <div>Share</div>
+                </div>  
+            </div>
+        </div>
+        <div class="content">
+            <div class="projects">
+                <div class="heading">Your Projects</div>
+                <div class="cards">
+                    <div class="project-card">
+                        <div class="project-title">Super Cool Project</div>
+                        <div class="project-description">Suspendisse mollis eget mi sit amet fringilla. Ut nec ligula tellus. Suspendisse blandit diam nec orci aliquam pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin arcu leo, dictum sit amet libero nec, sodales aliquet nunc. Phasellus consectetur feugiat laoreet. Vivamus ac neque vitae risus laoreet tempor sit amet et elit. Nunc gravida felis nulla, eget tempor est facilisis et. Proin consequat nibh sit amet felis vestibulum, ac cursus nulla molestie. Fusce rhoncus ex ut nulla efficitur, mollis placerat libero posuere.</div>
+                        <div class="mgmt">
+                            <img src="img/favorite.png">
+                            <img src="img/watch.png">
+                            <img src="img/share.png">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-title">Less Cool Project</div>
+                        <div class="project-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</div>
+                        <div class="mgmt">
+                            <img src="img/favorite.png">
+                            <img src="img/watch.png">
+                            <img src="img/share.png">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-title">Impossible App</div>
+                        <div class="project-description">Proin arcu leo, dictum sit amet libero nec, sodales aliquet nunc. Phasellus consectetur feugiat laoreet.</div>
+                        <div class="mgmt">
+                            <img src="img/favorite.png">
+                            <img src="img/watch.png">
+                            <img src="img/share.png">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-title">Easy Peasy App</div>
+                        <div class="project-description">Fusce rhoncus ex ut nulla efficitur, mollis placerat libero posuere.</div>
+                        <div class="mgmt">
+                            <img src="img/favorite.png">
+                            <img src="img/watch.png">
+                            <img src="img/share.png">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-title">Ad Blocker</div>
+                        <div class="project-description">Proin consequat nibh sit amet felis vestibulum, ac cursus nulla molestie.</div>
+                        <div class="mgmt">
+                            <img src="img/favorite.png">
+                            <img src="img/watch.png">
+                            <img src="img/share.png">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-title">Money Maker</div>
+                        <div class="project-description">Proin tristique mollis elit sed tristique. Sed nec erat fermentum, malesuada risus in, fringilla lorem. Nam sagittis diam a eros volutpat, sit amet dapibus ligula molestie. Vestibulum porta ullamcorper fermentum. Duis fringilla aliquet feugiat. Etiam sed nulla dapibus leo luctus volutpat non ut ligula. Vivamus sit amet erat molestie, egestas turpis sed, imperdiet ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed nibh odio, fermentum lobortis massa ac, tristique pulvinar mi. In imperdiet sit amet metus vitae sagittis.</div>
+                        <div class="mgmt">
+                            <img src="img/favorite.png">
+                            <img src="img/watch.png">
+                            <img src="img/share.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="news">
+                <div class="announcements">
+                    
+                    <div class="heading">Announcements</div>
+                    <div>Site Maintenance</div>
+                    <div>Community Share Day</div>
+                    <div>Updated Privacy Policy</div>
+                </div>
+                <div class="trending">
+                    <div class="heading">Trending</div>
+                    <div>user1</div>
+                    <div>user2</div>
+                    <div>user3</div>
+                    <div>user4</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
