Update layout using Grid

--- a/index.html
+++ b/index.html
@@ -118,18 +118,24 @@
             </div>
             <div class="news">
                 <div class="announcements">
-                    
                     <div class="heading">Announcements</div>
-                    <div>Site Maintenance</div>
-                    <div>Community Share Day</div>
-                    <div>Updated Privacy Policy</div>
+                    <div class="messages">
+                        <div class="title">Site Maintenance</div>
+                        <div class="message">Fusce dapibus dui sit amet molestie ultricies. Vivamus non turpis vel justo consequat pretium.</div>
+                        <div class="title">Community Share Day</div>
+                        <div class="message">Aliquam eget lectus vehicula, suscipit eros vitae, vestibulum tortor.</div>
+                        <div class="title">Updated Privacy Policy</div>
+                        <div class="message">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</div>
+                    </div>
                 </div>
                 <div class="trending">
                     <div class="heading">Trending</div>
-                    <div>user1</div>
-                    <div>user2</div>
-                    <div>user3</div>
-                    <div>user4</div>
+                    <div class="users">
+                        <div>user1</div>
+                        <div>user2</div>
+                        <div>user3</div>
+                        <div>user4</div>
+                    </div>
                 </div>
             </div>
         </div>
