Update Trending section elements and layout

--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 </head>
 <body>
     <div class="sidebar">
+        <img src="img/dashboard.png">
         <div class="sidebar-heading">Dashboard</div>
         <div class="menu1">
-            <!-- <img src="img/home.png" class="sidebar">
-            <img src="img/profile.png" class="sidebar">
-            <img src="img/messages.png" class="sidebar">
-            <img src="img/history.png" class="sidebar">
-            <img src="img/tasks.png" class="sidebar">
-            <img src="img/communities.png" class="sidebar"> -->
+            <img src="img/home.png">
             <div>Home</div>
+            <img src="img/profile.png">
             <div>Profile</div>
+            <img src="img/messages.png">
             <div>Messages</div>
+            <img src="img/history.png">
             <div>History</div>
+            <img src="img/tasks.png">
             <div>Tasks</div>
+            <img src="img/communities.png">
             <div>Communities</div>
         </div>
         <div class="menu2">
+            <img src="img/settings.png">
             <div>Settings</div>
+            <img src="img/help.png">
             <div>Support</div>
+            <img src="img/privacy.png">
             <div>Privacy</div>
         </div>
     </div>
@@ -131,10 +135,14 @@
                 <div class="trending">
                     <div class="heading">Trending</div>
                     <div class="users">
-                        <div>user1</div>
-                        <div>user2</div>
-                        <div>user3</div>
-                        <div>user4</div>
+                        <img src="img/superhero (1).png">
+                        <div>@Batman</div>
+                        <img src="img/superhero (2).png">
+                        <div>@Yoda</div>
+                        <img src="img/superhero.png">
+                        <div>@Ironman</div>
+                        <img src="img/supervillian.png">
+                        <div>@Darth_Vader</div>
                     </div>
                 </div>
             </div>
